2019-05-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-message.c (bm_find_bar_new): connect to
	GtkSearchEntry's "search-changed" signal instead of GtkEditable's
	"changed" signal; it provides a 150 msec delay:
	"To make filtering appear more reactive, it is a good idea
	to not react to every change in the entry text immediately,
	but only after a short delay. To support this, GtkSearchEntry
	emits the “search-changed” signal which can be used instead
	of the “changed” signal."


2019-05-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main-window: Clear the view filter when the search text is
	cleared.

	* src/main-window.c (bw_sos_icon_release): callback for the
	"icon-release" signal from the GtkEntry; act on it.
	(bw_create_index_widget): connect to the signal.

2019-05-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main-window: Port the subject-or-sender search bar to GtkSearchEntry

	* src/main-window.c (bw_create_index_widget):

2019-05-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-message: Port the find-in-message bar to GtkSearchBar and
	GtkSearchEntry

	* src/balsa-message.c (bm_find_bar_new), (bm_disable_find_entry),
	(balsa_message_init), (balsa_message_find_in_message):

2019-05-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-local: Use g_ptr_array_new_with_free_func() to manage
	deallocation of threading_info structures.

	* libbalsa/mailbox_local.c
	(libbalsa_mailbox_local_set_threading_info),
	(libbalsa_mailbox_local_msgno_removed)

2019-05-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Use g_ptr_array_new_with_free_func() to manage
	deallocation of LibBalsaMailboxIndexEntry.

	* libbalsa/mailbox.c (lbm_index_entry_free),
	(libbalsa_mailbox_free_mindex), (libbalsa_mailbox_open),
	(libbalsa_mailbox_msgno_removed)

2019-05-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-mbox: Use g_ptr_array_new_with_free_func() to manage
	deallocation of message_info structures.
